--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Aldo Sanchez, Fred Nguyen, Alex Baker",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "watson-developer-cloud": "^2.21.1"
   }
 }
