--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "Aldo Sanchez, Fred Nguyen, Alex Baker",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "firebase": "^3.6.10",
     "watson-developer-cloud": "^2.21.1"
   }
 }
