--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
-    "firebase": "^3.6.10",
+    "firebase-admin": "^4.1.1",
     "watson-developer-cloud": "^2.21.1"
   }
 }
