--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "firebase-admin": "^4.1.1",
+    "mysql": "^2.13.0",
     "sequelize": "^3.30.2",
     "watson-developer-cloud": "^2.21.1"
   }
